# rune-pause

./: .gitignore  Cargo.toml  README.md  fix-runepause.patch
.github/workflows/: release.yml
apps/desktop/: package.json  tauri.conf.json
apps/desktop/apps/desktop/: index.html  package.json  tauri.conf.json  tsconfig.json
apps/desktop/apps/desktop/src/: main.ts
apps/desktop/apps/desktop/src-tauri/: Cargo.toml
apps/desktop/apps/desktop/src-tauri/src/: bridge.rs  idle.rs  main.rs  state.rs
apps/desktop/apps/desktop/src/lib/: exercises.ts  store.ts  theme.ts
apps/desktop/src/: App.svelte  styles.css
apps/desktop/src/lib/: format.ts
apps/desktop/src/windows/: overlay.svelte
core/timer/: Cargo.toml
core/timer/src/: lib.rs
docs/: index.html  latest-macos.json  latest-windows.json
src-tauri/: Cargo.toml
