[package]
name = "rune-pause"
version = "0.4.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
core-timer = { path = "../../core/timer" }
anyhow = "1"
thiserror = "1"
dirs = "5"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse","Win32_Foundation"] }
